- 에러 메세지 변경 - user 단건 select시 optional로 반환하도록 수정 - vacation 사용 api에서 parameter 잘못 매핑되어있는 버그 수정